[HUB-16813F] preview double scroll fixed

--- a/src/app/pages/private/board/board.component.scss
+++ b/src/app/pages/private/board/board.component.scss
@@ -223,7 +223,7 @@ $default-font: "Helvetica Neue", Medium;
                     padding: 18px;
                     color: #0080ff;
                     font-size: 14px;
-                    font-weight: 500;
+                    font-weight: bold;
                     text-align: left;
                     background-color: #e3f1ff;
                 }
